--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="input">
                     <input type="text" id="income-title-input" name="title" placeholder="Title">
                     <input type="number" id="income-amount-input" name="amount" placeholder="$0">
-                    <div class="add-income"><img src="icon/plus.png" alt=""></div>
+                    <div class="add-income"><img src="plus.png" alt=""></div>
                 </div>
             </div>
             <div class="hide" id="expense">
@@ -60,7 +60,7 @@
                 <div class="input">
                     <input type="text" id="expense-title-input" name="title" placeholder="Title">
                     <input type="number" id="expense-amount-input" name="amount" placeholder="$0">
-                    <div class="add-expense"><img src="icon/plus.png" alt=""></div>
+                    <div class="add-expense"><img src="plus.png" alt=""></div>
                 </div>
             </div>
             <div id="all">
